fix navbar dropdown spacing

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -88,7 +88,6 @@
     box-shadow: 4px 4px 20px rgba(0, 0, 0, 0.1);
     z-index: 7;
     position: relative;
-    margin-bottom: 8px;
     font-weight: 800;
   }
 }
