--- a/app/assets/stylesheets/components/_dropdown.scss
+++ b/app/assets/stylesheets/components/_dropdown.scss
@@ -31,6 +31,7 @@
   inset: 0 auto auto 0;
   transform: translate3d(12px, 44px, 0);
   border: 1px solid #08346125;
+  margin-top: 4px !important;
 }
 // coming from master
 
@@ -51,6 +52,7 @@
 .drop__down__card.active {
   visibility: visible !important;
   opacity: 1 !important;
+  margin-top: 8px;
 }
 
 .drop__down__close {
