--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -44,6 +44,10 @@
   }
 }
 
+p.nav-link {
+  margin-bottom: 0;
+}
+
 .nav-link {
   font-size: 14px;
   letter-spacing: 1.25px;
